--- a/index.html
+++ b/index.html
@@ -170,6 +170,63 @@
       transform: scale(1.1);
       color: #e3f2fd;
     }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 24px;
+      }
+
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav li {
+        margin-left: 0;
+        margin-bottom: 10px;
+      }
+
+      .hero h2 {
+        font-size: 28px;
+      }
+
+      .hero p {
+        font-size: 16px;
+      }
+
+      .footer-content a {
+        font-size: 20px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header h1 {
+        font-size: 20px;
+      }
+
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav li {
+        margin-left: 0;
+        margin-bottom: 10px;
+      }
+
+      .hero h2 {
+        font-size: 24px;
+      }
+
+      .hero p {
+        font-size: 14px;
+      }
+
+      .footer-content a {
+        font-size: 18px;
+      }
+    }
   </style>
 </head>
 <body>
