--- a/skills.html
+++ b/skills.html
@@ -35,6 +35,18 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      animation: fadeInDown 1s ease-in-out;
+    }
+
+    @keyframes fadeInDown {
+      0% {
+        opacity: 0;
+        transform: translateY(-50px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     header h1 {
@@ -77,6 +89,18 @@
       max-width: 1200px;
       margin: 100px auto 0;
       padding: 40px;
+      animation: fadeInUp 1.5s ease-in-out;
+    }
+
+    @keyframes fadeInUp {
+      0% {
+        opacity: 0;
+        transform: translateY(50px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     section {
@@ -90,6 +114,19 @@
       font-weight: 700;
       display: flex;
       align-items: center;
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.05);
+      }
+      100% {
+        transform: scale(1);
+      }
     }
 
     h2 i {
@@ -113,6 +150,16 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
+      animation: fadeIn 1.5s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
     }
 
     .dashboard-card:hover {
