--- a/certifications.html
+++ b/certifications.html
@@ -35,6 +35,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      padding: 0 20px;
     }
 
     header h1 {
@@ -55,6 +56,7 @@
       margin: 0;
       padding: 0;
       display: flex;
+      flex-wrap: wrap;
     }
 
     nav li {
@@ -76,7 +78,7 @@
     main {
       max-width: 1200px;
       margin: 100px auto 0;
-      padding: 40px;
+      padding: 0 20px;
     }
 
     section {
@@ -99,7 +101,7 @@
 
     .dashboard {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       grid-gap: 20px;
     }
 
@@ -161,6 +163,49 @@
     .footer-content a:hover {
       transform: scale(1.1);
       color: #e3f2fd;
+    }
+
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 18px;
+      }
+
+      nav li {
+        margin-left: 10px;
+      }
+
+      h2 {
+        font-size: 28px;
+      }
+
+      .dashboard-card h3 {
+        font-size: 20px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav li {
+        margin: 10px 0;
+      }
+
+      .header-content {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      main {
+        padding: 0 10px;
+      }
+
+      footer {
+        padding: 15px;
+      }
     }
   </style>
 </head>
