--- a/education.html
+++ b/education.html
@@ -1,227 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fahmida - Education</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <style>
-    /* Global Styles */
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f0f4f8;
-      color: #333;
-    }
-
-    /* Header Styles */
-    header {
-      background-color: #1565c0;
-      padding: 20px 0;
-      position: sticky;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .header-content {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    header h1 {
-      color: #fff;
-      margin: 0;
-      font-weight: 700;
-      display: flex;
-      align-items: center;
-    }
-
-    header h1 i {
-      margin-right: 10px;
-      font-size: 24px;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-    }
-
-    nav li {
-      margin-left: 20px;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #e3f2fd;
-    }
-
-    /* Main Content Styles */
-    main {
-      max-width: 1200px;
-      margin: 100px auto 0;
-      padding: 40px;
-    }
-
-    section {
-      margin-bottom: 80px;
-    }
-
-    h2 {
-      color: #1565c0;
-      font-size: 36px;
-      margin-top: 0;
-      font-weight: 700;
-      display: flex;
-      align-items: center;
-    }
-
-    h2 i {
-      margin-right: 10px;
-      font-size: 28px;
-    }
-
-    .dashboard {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-gap: 20px;
-    }
-
-    .dashboard-card {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-
-    .dashboard-card:hover {
-      transform: translateY(-5px);
-    }
-
-    .dashboard-card h3 {
-      color: #1565c0;
-      font-size: 24px;
-      margin-top: 0;
-    }
-
-    .dashboard-card p {
-      margin-bottom: 0;
-    }
-
-    .dashboard-card i {
-      font-size: 36px;
-      margin-bottom: 10px;
-    }
-
-    /* Footer Styles */
-    footer {
-      background-color: #1565c0;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-
-    .footer-content {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      animation: fadeInUp 1s ease-in-out;
-    }
-
-    .footer-content a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 24px;
-      transition: transform 0.3s ease, color 0.3s ease;
-    }
-
-    .footer-content a:hover {
-      transform: scale(1.1);
-      color: #e3f2fd;
-    }
-  </style>
+    <title>Education - Fahmida</title>
+    <style>
+        /* Styles are the same as the index.html */
+    </style>
 </head>
 <body>
-  <header>
     <div class="header-content">
-      <h1><i class="fas fa-graduation-cap"></i>Education</h1>
-      <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="certifications.html">Certifications</a></li>
-            <li><a href="extracurricular.html">Extracurricular</a></li>
-        </ul>
-      </nav>
+        <h1>Education</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="education.html">Education</a>
+            <a href="skills.html">Skills</a>
+            <a href="certifications.html">Certifications</a>
+            <a href="extracurricular.html">Extracurricular</a>
+        </nav>
     </div>
-  </header>
 
-  <main>
-    <section>
-      <h2><i class="fas fa-university"></i>Education</h2>
-      <div class="dashboard">
-        <div class="dashboard-card">
-          <i class="fas fa-graduation-cap"></i>
-          <h3>Data Analyst Course</h3>
-          <p>Dataspark, Kozhikode</p>
-          <p>Expected Completion: December, 2024</p>
+    <div class="main">
+        <div class="section">
+            <h2>Education</h2>
+            <div class="dashboard">
+                <div class="dashboard-card">
+                    <h3>Data Analyst Course</h3>
+                    <p>Dataspark, Kozhikode</p>
+                    <p>Expected Completion: December, 2024</p>
+                </div>
+                <div class="dashboard-card">
+                    <h3>Bachelor of Arts</h3>
+                    <p>Malayalam and Sociology (Double Main)</p>
+                    <p>Calicut University</p>
+                    <p>Duration: 2021 - 2024</p>
+                    <p>GPA: 7.6</p>
+                </div>
+                <div class="dashboard-card">
+                    <h3>Higher Secondary</h3>
+                    <p>Humanities</p>
+                    <p>AMHSS Poovambayi, Kozhikode</p>
+                    <p>Duration: 2019 - 2021</p>
+                </div>
+                <div class="dashboard-card">
+                    <h3>High School</h3>
+                    <p>CBSE</p>
+                    <p>Markaz Public School, Blussery, Kozhikode</p>
+                    <p>Year of Completion: 2019</p>
+                </div>
+            </div>
         </div>
-        <div class="dashboard-card">
-          <i class="fas fa-graduation-cap"></i>
-          <h3>Bachelor of Arts</h3>
-          <p>Malayalam and Sociology (Double Main)</p>
-          <p>Calicut University</p>
-          <p>Duration: 2021 - 2024</p>
-          <p>GPA: 7.6</p>
-        </div>
-        <div class="dashboard-card">
-          <i class="fas fa-school"></i>
-          <h3>Higher Secondary</h3>
-          <p>Humanities</p>
-          <p>AMHSS Poovambayi, Kozhikode</p>
-          <p>Duration: 2019 - 2021</p>
-        </div>
-        <div class="dashboard-card">
-          <i class="fas fa-school"></i>
-          <h3>High School</h3>
-          <p>CBSE</p>
-          <p>Markaz Public School, Blussery, Kozhikode</p>
-          <p>Year of Completion: 2019</p>
-        </div>
-      </div>
-    </section>
-  </main>
+    </div>
 
-  <footer>
     <div class="footer-content">
-      <a href="tel:+1234567890"><i class="fas fa-phone"></i></a>
-      <a href="mailto:example@example.com"><i class="fas fa-envelope"></i></a>
-      <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
+        <a href="tel:+1234567890">+1 234 567 890</a>
+        <a href="mailto:example@example.com">example@example.com</a>
+        <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank">1234 Street Name, City, Country</a>
     </div>
-  </footer>
 </body>
 </html>
