--- a/index.html
+++ b/index.html
@@ -1,262 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fahmida - Data Driven Insights</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <style>
-    /* Global Styles */
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f0f4f8;
-      color: #333;
-    }
+    <title>Fahmida</title>
+    <style>
+        /* Global Styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-    /* Header Styles */
-    header {
-      background-color: #1565c0;
-      padding: 20px 0;
-      position: sticky;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
+        .header-content, .footer-content {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
 
-    .header-content {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      animation: fadeInDown 1s ease-in-out;
-    }
+        .header-content a, .footer-content a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 1rem;
+        }
 
-    @keyframes fadeInDown {
-      0% {
-        opacity: 0;
-        transform: translateY(-50px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
+        .main {
+            padding: 2rem;
+        }
 
-    header h1 {
-      color: #fff;
-      margin: 0;
-      font-weight: 700;
-      display: flex;
-      align-items: center;
-    }
+        .section {
+            margin-bottom: 2rem;
+        }
 
-    header h1 i {
-      margin-right: 10px;
-      font-size: 24px;
-    }
+        .dashboard {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 1rem;
+        }
 
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-    }
+        .dashboard-card {
+            background-color: #f4f4f4;
+            padding: 1rem;
+            border-radius: 5px;
+            text-align: center;
+        }
 
-    nav li {
-      margin-left: 20px;
-    }
+        .data-viz-icon::before {
+            content: "📊";
+            font-size: 2rem;
+            display: block;
+            margin-bottom: 0.5rem;
+        }
 
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #e3f2fd;
-    }
-
-    /* Hero Section Styles */
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      max-width: 1200px;
-      margin: 100px auto 0;
-      padding: 40px;
-      text-align: center;
-      animation: fadeInUp 1.5s ease-in-out;
-    }
-
-    @keyframes fadeInUp {
-      0% {
-        opacity: 0;
-        transform: translateY(50px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .hero h2 {
-      font-size: 36px;
-      font-weight: 700;
-      margin-bottom: 20px;
-      animation: pulse 2s infinite;
-    }
-
-    @keyframes pulse {
-      0% {
-        transform: scale(1);
-      }
-      50% {
-        transform: scale(1.05);
-      }
-      100% {
-        transform: scale(1);
-      }
-    }
-
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 20px;
-      animation: fadeIn 1.5s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-      }
-      100% {
-        opacity: 1;
-      }
-    }
-
-    /* Footer Styles */
-    footer {
-      background-color: #1565c0;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-
-    .footer-content {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      animation: fadeInUp 1s ease-in-out;
-    }
-
-    .footer-content a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 24px;
-      transition: transform 0.3s ease, color 0.3s ease;
-    }
-
-    .footer-content a:hover {
-      transform: scale(1.1);
-      color: #e3f2fd;
-    }
-
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      header h1 {
-        font-size: 24px;
-      }
-
-      nav ul {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      nav li {
-        margin-left: 0;
-        margin-bottom: 10px;
-      }
-
-      .hero h2 {
-        font-size: 28px;
-      }
-
-      .hero p {
-        font-size: 16px;
-      }
-
-      .footer-content a {
-        font-size: 20px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      header h1 {
-        font-size: 20px;
-      }
-
-      nav ul {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      nav li {
-        margin-left: 0;
-        margin-bottom: 10px;
-      }
-
-      .hero h2 {
-        font-size: 24px;
-      }
-
-      .hero p {
-        font-size: 14px;
-      }
-
-      .footer-content a {
-        font-size: 18px;
-      }
-    }
-  </style>
+        .code-icon::before {
+            content: "💻";
+            font-size: 2rem;
+            display: block;
+            margin-bottom: 0.5rem;
+        }
+    </style>
 </head>
 <body>
-  <header>
     <div class="header-content">
-      <h1><i class="fas fa-chart-line"></i>FAHMIDA</h1>
-      <nav>
-        <ul>
-          <li><a href="education.html">Education</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="certifications.html">Certifications</a></li>
-          <li><a href="extracurricular.html">Extracurricular</a></li>
-        </ul>
-      </nav>
+        <h1>FAHMIDA</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="education.html">Education</a>
+            <a href="skills.html">Skills</a>
+            <a href="certifications.html">Certifications</a>
+            <a href="extracurricular.html">Extracurricular</a>
+        </nav>
     </div>
-  </header>
 
-  <main>
-    <section class="hero">
-      <h2>Data Driven Insights</h2>
-      <p>I am an ambitious Sociology graduate with a double major in Malayalam, currently advancing in Data Analysis. I possess a solid foundation in research, analytics, and statistical analysis, with proficiency in Python and SQL.</p>
-    </section>
-  </main>
+    <div class="main">
+        <div class="section hero">
+            <h2>Data Driven Insights</h2>
+            <p>I am an ambitious Sociology graduate with a double major in Malayalam, currently advancing in Data Analysis. I possess a solid foundation in research, analytics, and statistical analysis, with proficiency in Python and SQL.</p>
+        </div>
+    </div>
 
-  <footer>
     <div class="footer-content">
-      <a href="tel:+1234567890"><i class="fas fa-phone"></i></a>
-      <a href="mailto:example@example.com"><i class="fas fa-envelope"></i></a>
-      <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
+        <a href="tel:+1234567890">+1 234 567 890</a>
+        <a href="mailto:example@example.com">example@example.com</a>
+        <a href="https://maps.google.com/?q=1234+Street+Name,+City,+Country" target="_blank">1234 Street Name, City, Country</a>
     </div>
-  </footer>
 </body>
 </html>
