--- a/education.html
+++ b/education.html
@@ -3,8 +3,78 @@
 <head>
     <title>Education - Fahmida</title>
     <style>
-        /* Styles are the same as the index.html */
-    </style>
+      /* Global Styles */
+      body {
+          font-family: Arial, sans-serif;
+          margin: 0;
+          padding: 0;
+      }
+
+      .header-content {
+          background-color: #333;
+          color: #fff;
+          padding: 1rem;
+          text-align: center;
+      }
+
+      .header-content h1 {
+          margin: 0;
+      }
+
+      .header-content nav a {
+          color: #fff;
+          text-decoration: none;
+          margin: 0 1rem;
+      }
+
+      .main {
+          padding: 2rem;
+      }
+
+      .section {
+          margin-bottom: 2rem;
+      }
+
+      .dashboard {
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          grid-gap: 1rem;
+      }
+
+      .dashboard-card {
+          background-color: #f4f4f4;
+          padding: 1rem;
+          border-radius: 5px;
+          text-align: center;
+      }
+
+      .data-viz-icon::before {
+          content: "📊";
+          font-size: 2rem;
+          display: block;
+          margin-bottom: 0.5rem;
+      }
+
+      .code-icon::before {
+          content: "💻";
+          font-size: 2rem;
+          display: block;
+          margin-bottom: 0.5rem;
+      }
+
+      .footer-content {
+          background-color: #333;
+          color: #fff;
+          padding: 1rem;
+          text-align: center;
+      }
+
+      .footer-content a {
+          color: #fff;
+          text-decoration: none;
+          margin: 0 1rem;
+      }
+  </style>
 </head>
 <body>
     <div class="header-content">
