--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
             padding: 0;
         }
 
-        .header-content, .footer-content {
+        .header-content {
             background-color: #333;
             color: #fff;
             padding: 1rem;
             text-align: center;
         }
 
-        .header-content a, .footer-content a {
+        .header-content h1 {
+            margin: 0;
+        }
+
+        .header-content nav a {
             color: #fff;
             text-decoration: none;
             margin: 0 1rem;
@@ -56,6 +60,19 @@
             font-size: 2rem;
             display: block;
             margin-bottom: 0.5rem;
+        }
+
+        .footer-content {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        .footer-content a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 1rem;
         }
     </style>
 </head>
