--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
             color: #fff;
             text-decoration: none;
             margin: 0 1rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .header-content nav a::before {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: #fff;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .header-content nav a:hover::before {
+            transform: translateX(0);
         }
 
         .main {
@@ -73,6 +91,18 @@
             color: #fff;
             text-decoration: none;
             margin: 0 1rem;
+        }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .dashboard {
+                grid-template-columns: 1fr;
+            }
+
+            .header-content nav a {
+                display: block;
+                margin: 0.5rem 0;
+            }
         }
     </style>
 </head>
